# miniquery

./: .clang-format  .gitignore  CI_README.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  quick-test.yml
data/: generate_arrow_data.py
include/: expression.h  query_executor.h  query_planner.h  scan_operator.h
playground/: Makefile  ipc_scan.cpp
scripts/: test-local.sh
src/: expression.cpp  main.cpp  query_executor.cpp  query_planner.cpp  scan_operator.cpp
